--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,19 +2,141 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textApPa"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.366"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.412" />
+        android:layout_height="0dp"
+        android:text="Apellido Pa."
+        android:textSize="16sp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="134dp" />
 
+    <TextView
+        android:id="@+id/textFechaNa"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="Fecha Nac."
+        android:textSize="16sp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="245dp" />
+
+    <TextView
+        android:id="@+id/textRFC"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="RFC"
+        android:textColor="?attr/colorControlActivated"
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="41dp"
+        tools:layout_editor_absoluteY="363dp" />
+
+    <TextView
+        android:id="@+id/textHomo"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="Homonimia"
+        android:textSize="16sp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="308dp" />
+
+    <TextView
+        android:id="@+id/textApMa"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="Apellido Ma."
+        android:textSize="16sp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="194dp" />
+
+    <TextView
+        android:id="@+id/textNombre"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:fontFamily="sans-serif"
+        android:text="Nombre"
+        android:textSize="16sp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="69dp" />
+
+    <EditText
+        android:id="@+id/editTextApMa"
+        android:layout_width="198dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="103dp"
+        tools:layout_editor_absoluteY="175dp" />
+
+    <EditText
+        android:id="@+id/editTextRFC"
+        style="@style/Widget.AppCompat.EditText"
+        android:layout_width="209dp"
+        android:layout_height="36dp"
+        android:background="?android:attr/colorEdgeEffect"
+        android:editable="false"
+        android:ems="10"
+        android:inputType="text"
+        android:textColor="?android:attr/colorForeground"
+        tools:layout_editor_absoluteX="90dp"
+        tools:layout_editor_absoluteY="354dp" />
+
+    <EditText
+        android:id="@+id/editTextHomo"
+        android:layout_width="197dp"
+        android:layout_height="wrap_content"
+        android:editable="false"
+        android:ems="10"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="103dp"
+        tools:layout_editor_absoluteY="291dp" />
+
+    <EditText
+        android:id="@+id/editTextApPa"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="101dp"
+        tools:layout_editor_absoluteY="117dp" />
+
+    <EditText
+        android:id="@+id/editTextNombre"
+        android:layout_width="201dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="99dp"
+        tools:layout_editor_absoluteY="51dp" />
+
+    <EditText
+        android:id="@+id/editTextFechaN"
+        android:layout_width="197dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="date"
+        tools:layout_editor_absoluteX="103dp"
+        tools:layout_editor_absoluteY="232dp" />
+
+    <Button
+        android:id="@+id/buttonLimpiar"
+        android:layout_width="107dp"
+        android:layout_height="wrap_content"
+        android:text="Limpiar"
+        android:textAllCaps="false"
+        tools:layout_editor_absoluteX="167dp"
+        tools:layout_editor_absoluteY="421dp" />
+
+    <Button
+        android:id="@+id/buttonGenerar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:onClick="GenerarRFC"
+        android:text="Generar RFC"
+        android:textAllCaps="false"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="420dp" />
 </android.support.constraint.ConstraintLayout>
